FIX: background on safari

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -11,8 +11,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background: data-uri("./images/svg/background.svg");
-  background-size: contain;
+  background-image: data-uri("./images/svg/background.svg");
+  background-size: 100% 100%;
 }
 
 body {
